Update dependecy versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.0-20231212-004100-8b952255
+ballerinaLangVersion=2201.9.0-SNAPHOT
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -74,7 +74,7 @@ stdlibPersistVersion=1.2.0-20230831-142100-b7b968f
 persistToolVersion=1.2.0-20230908-152500-2ba8c45
 
 # Dev Tools
-devToolsVersion=1.2.1-20230914-153500-664cd40
+devToolsVersion=1.3.1-SNAPSHOT
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
