Update openapi version

--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ graphqlVersion=0.7.3
 protocToolVersion=0.1.2
 
 # OpenAPI Module
-openapiVersion=1.7.5-20231218-101200-0a52da8
+openapiVersion=1.7.5
 
 # AsyncAPI Module
 asyncapiVersion=0.6.0
