--- a/gradle.properties
+++ b/gradle.properties
@@ -63,7 +63,7 @@ stdlibWebsubVersion=2.10.0
 stdlibWebsubhubVersion=1.10.0
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.10.0
+stdlibGraphqlVersion=1.11.0-20240212-151600-33c9bfd
 stdlibSqlVersion=1.11.1
 
 # Stdlib Level 08
