--- a/gradle.properties
+++ b/gradle.properties
@@ -73,11 +73,11 @@ stdlibPersistVersion=1.2.0
 persistToolVersion=1.2.1
 
 # Dev Tools
-devToolsVersion=1.3.1
+devToolsVersion=1.3.2-20240213-105100-6909034
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlVersion=0.8.1
+graphqlVersion=0.8.2-20240213-110300-da4158f
 
 # Protoc Tool
 protocToolVersion=0.2.0
