Update openapi version

--- a/gradle.properties
+++ b/gradle.properties
@@ -83,10 +83,10 @@ graphqlVersion=0.8.1-20231120-114700-ea32f2f
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.1
+openapiVersion=1.8.2-20240214-130200-744a8e5
 
 # AsyncAPI Module
-asyncapiVersion=0.7.1
+asyncapiVersion=0.7.0
 
 c2cVersion=2.11.2
 
