Update persist tool version

--- a/gradle.properties
+++ b/gradle.properties
@@ -70,7 +70,7 @@ stdlibSqlVersion=1.11.1
 stdlibPersistVersion=1.2.0
 
 # Persist Tool
-persistToolVersion=1.2.1
+persistToolVersion=1.2.2-20240214-201800-5515d6f
 
 # Dev Tools
 devToolsVersion=1.3.2-20240213-105100-6909034
