Update FTP patch version

--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,7 @@ observeInternalVersion=1.2.0-20230831-141400-b3bbdc2
 # Stdlib Level 03
 stdlibCacheVersion=3.7.0-20230831-151700-7e2b0fa
 stdlibFileVersion=1.9.0-20230831-160900-252d078
-stdlibFtpVersion=2.9.2-20240219-093500-782942d
+stdlibFtpVersion=2.9.1
 stdlibMimeVersion=2.9.0-20230831-160900-6ecc648
 stdlibTcpVersion=1.9.0-20230831-161800-3d4658f
 stdlibUdpVersion=1.9.0-20230831-161200-acbdce0
