--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -578,19 +578,19 @@ jobs:
           asset_name: ballerina-${{ needs.publish-release.outputs.project-version }}-macos-arm-x64.pkg.sig
           asset_path: ./ballerina-${{ needs.publish-release.outputs.project-version }}-macos-arm-x64.pkg.sig
           asset_content_type: application/octet-stream
-      - name: Install Ballerina PKG
-        run: sudo installer -pkg installers/mac/target/pkg/ballerina-*-macos-x64.pkg -target /
-      - name: Update Installer Test Configs
-        run: |
-          DISPLAY_TEXT=${{ needs.ubuntu-build.outputs.lang-version }}
-          SWAN_LAKE_LATEST_VERSION="swan-lake-"+$DISPLAY_TEXT
-          perl -pi -e "s/^\s*swan-lake-latest-version-display-text=.*/swan-lake-latest-version-display-text=$DISPLAY_TEXT/" ballerina-test-automation/gradle.properties
-          perl -pi -e "s/^\s*swan-lake-latest-version=.*/swan-lake-latest-version=$SWAN_LAKE_LATEST_VERSION/" ballerina-test-automation/gradle.properties
-      - name: Run Installer Tests
-        working-directory: ./ballerina-test-automation/installer-test
-        run: ./../gradlew build --stacktrace -scan --console=plain --no-daemon -DballerinaInstalled=true
-        env:
-          TEST_MODE_ACTIVE: true
+#      - name: Install Ballerina PKG
+#        run: sudo installer -pkg installers/mac/target/pkg/ballerina-*-macos-x64.pkg -target /
+#      - name: Update Installer Test Configs
+#        run: |
+#          DISPLAY_TEXT=${{ needs.ubuntu-build.outputs.lang-version }}
+#          SWAN_LAKE_LATEST_VERSION="swan-lake-"+$DISPLAY_TEXT
+#          perl -pi -e "s/^\s*swan-lake-latest-version-display-text=.*/swan-lake-latest-version-display-text=$DISPLAY_TEXT/" ballerina-test-automation/gradle.properties
+#          perl -pi -e "s/^\s*swan-lake-latest-version=.*/swan-lake-latest-version=$SWAN_LAKE_LATEST_VERSION/" ballerina-test-automation/gradle.properties
+#      - name: Run Installer Tests
+#        working-directory: ./ballerina-test-automation/installer-test
+#        run: ./../gradlew build --stacktrace -scan --console=plain --no-daemon -DballerinaInstalled=true
+#        env:
+#          TEST_MODE_ACTIVE: true
 
   windows-installer-build:
     name: Windows Installer Build
