--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -679,6 +679,7 @@ jobs:
           set SWAN_LAKE_LATEST_VERSION=swan-lake-%DISPLAY_TEXT%
           perl -pi -e "s/^\s*swan-lake-latest-version-display-text=.*/swan-lake-latest-version-display-text=%DISPLAY_TEXT%/" ballerina-test-automation/gradle.properties
           perl -pi -e "s/^\s*swan-lake-latest-version=.*/swan-lake-latest-version=%SWAN_LAKE_LATEST_VERSION%/" ballerina-test-automation/gradle.properties
+        shell: cmd
       - name: Run Installer Tests
         working-directory: .\ballerina-test-automation\installer-test
         run: |
