--- a/.github/workflows/daily-build-editor.yml
+++ b/.github/workflows/daily-build-editor.yml
@@ -21,32 +21,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '10.22.1'
-      - name: Checkout Lang Repository
-        uses: actions/checkout@v3
-        with:
-          repository: ballerina-platform/ballerina-lang
-          ref: worker_change
-          path: ballerina-lang
-
-      - name: Build with Gradle
-        env:
-          packageUser: ${{ github.actor }}
-          packagePAT: ${{ secrets.GITHUB_TOKEN }}
-          devCentralToken: ${{ secrets.BALLERINA_CENTRAL_DEV_ACCESS_TOKEN }}
-          githubAccessToken: ${{ secrets.GITHUB_TOKEN }}
-          ballerinaBotWorkflow: $ {{ secrets.BALLERINA_BOT_WORKFLOW }}
-          TEST_MODE_ACTIVE: true
-        run:  |
-          cd ballerina-lang
-          ./gradlew clean build --stacktrace --scan -x test --console=plain --no-daemon --continue publishToMavenLocal
-          cd ..
       - name: Checkout Dev Tools Repository
         uses: actions/checkout@v3
         with:
           repository: ballerina-platform/ballerina-dev-tools
-          ref: worker_change
+          ref: flow_model
           path: ballerina-dev-tools
       - name: Build with Gradle
+        id: build-dev-tools
         env:
           packageUser: ${{ github.actor }}
           packagePAT: ${{ secrets.GITHUB_TOKEN }}
@@ -56,13 +38,13 @@ jobs:
           TEST_MODE_ACTIVE: true
         run:  |
           cd ballerina-dev-tools
-          sed -i 's/ballerinaLangVersion=\([0-9]*\.[0-9]*\.[0-9]*\)-.*/ballerinaLangVersion=\1-SNAPSHOT/' gradle.properties
+          DEV_TOOLS_VERSION=$(grep "^version=" gradle.properties | cut -d'=' -f2)
+          echo "::set-output name=version::$DEV_TOOLS_VERSION"
           ./gradlew clean build --stacktrace --scan -x test  --console=plain --no-daemon --continue publishToMavenLocal
           cd ..
       - name: Checkout Distribution Repository
         uses: actions/checkout@v3
         with:
-          ref: worker_change
           repository: ballerina-platform/ballerina-distribution
           path: ballerina-distribution
       - name: Get daily docker version
@@ -90,6 +72,7 @@ jobs:
           TEST_MODE_ACTIVE: true
         run: |
             cd ballerina-distribution
+            sed -i "s/^devToolsVersion=.*/devToolsVersion=${{ steps.build-dev-tools.outputs.version }}/" gradle.properties
             ./gradlew clean build --stacktrace --scan -x test --console=plain --no-daemon --continue -x project-api-tests:test
       - name: Create linux-deb
         id: run_installers_deb
@@ -155,7 +138,7 @@ jobs:
                       {
                       "keyValue": {
                           "topLabel": "Ballerina Distribution",
-                          "content": "v2201.9.0",
+                          "content": "v${{ steps.project-version.outputs.langversion }}",
                           "onClick": {
                           "openLink": {
                               "url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
