--- a/gradle.properties
+++ b/gradle.properties
@@ -73,7 +73,7 @@ stdlibPersistVersion=1.2.0
 persistToolVersion=1.2.2
 
 # Dev Tools
-devToolsVersion=1.3.2
+devToolsVersion=1.3.3-20240307-162800-940a309
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
