Update OpenAPI tool timestamped version

--- a/gradle.properties
+++ b/gradle.properties
@@ -82,7 +82,7 @@ graphqlVersion=0.9.0
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.2
+openapiVersion=1.8.3-20240307-222200-5815963
 
 # AsyncAPI Module
 asyncapiVersion=0.7.1
