--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -334,6 +334,9 @@ jobs:
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '2.1.x'
+      - name: Set up Wix toolkit
+        run: echo "${WIX}bin" >> $GITHUB_PATH
+        shell: bash
       - name: Install GUID Generator
         run: dotnet tool install -g dotnet-guid --version 0.5.2
       - name: Install Wget
@@ -344,12 +347,10 @@ jobs:
       - name: Create windows-msi Installer
         id: run_installers_msi
         run: |
-          $env:Path += ";C:\Program Files (x86)\WiX Toolset v3.11\bin"
           move installers\windows .\
           ren windows w
           cd w
           .\build-ballerina-windows-x64.bat --version ${{ needs.publish-release.outputs.project-version }} --path .\..\
-          echo "Created windows-msi successfully"
       - name: Generate Hashes
         run: |
           openssl dgst -sha256 -out ballerina-${{ needs.publish-release.outputs.project-version }}-windows-x64.msi.sha256 w\target\msi\ballerina-${{ needs.publish-release.outputs.project-version }}-windows-x64.msi
