--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.6-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.6-20240307-202100-c4949d1c
+ballerinaLangVersion=2201.8.6
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -73,7 +73,7 @@ stdlibPersistVersion=1.2.0
 persistToolVersion=1.2.2
 
 # Dev Tools
-devToolsVersion=1.3.3-20240307-162800-940a309
+devToolsVersion=1.3.2
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
@@ -82,7 +82,7 @@ graphqlVersion=0.9.0
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.3-20240307-222200-5815963
+openapiVersion=1.8.3
 
 # AsyncAPI Module
 asyncapiVersion=0.7.1
