Correct command line execution path in windows
Updated the command line paths in the build.gradle file to reflect the correct location of the 'bal.bat' script within the distribution path on Windows.

Fixes https://github.com/ballerina-platform/ballerina-distribution/issues/5266

--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -1099,12 +1099,12 @@ def buildAndTestStandardLibs = { distPath, stdlibTest, isStageTest, testMinorVer
         if (!isStageTest) {
             exec {
                 workingDir "${distPath}/${stdlibTest}"
-                commandLine 'cmd', '/c', "${distPath}/bin/bal/bal.bat init test"
+                commandLine 'cmd', '/c', "${distPath}/bin/bal.bat init test"
             }
         } else {
             exec {
                 workingDir "${distPath}/${stdlibTest}"
-                commandLine 'cmd', '/c', "${distPath}/bin/bal/bal.bat clean"
+                commandLine 'cmd', '/c', "${distPath}/bin/bal.bat clean"
             }
         }
         if (testMinorVersionDifference) {
