--- a/gradle.properties
+++ b/gradle.properties
@@ -77,6 +77,9 @@ persistToolVersion=1.2.0-20230908-152500-2ba8c45
 devToolsVersion=1.2.1-20230914-153500-664cd40
 ballerinaCommandVersion=1.4.2
 
+# API Doc UI
+docUiApi=https://api.central.ballerina.io/2.0/docs/doc-ui
+
 # GraphQL Tool
 graphqlVersion=0.8.1
 
