Update the WebSocket, TCP and UDP module versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -38,8 +38,8 @@ stdlibCacheVersion=3.7.1
 stdlibFileVersion=1.9.0
 stdlibFtpVersion=2.9.1
 stdlibMimeVersion=2.9.0
-stdlibTcpVersion=1.9.1
-stdlibUdpVersion=1.9.1
+stdlibTcpVersion=1.9.2-20240403-151900-602b638
+stdlibUdpVersion=1.9.2-20240403-151800-5449c0a
 stdlibUuidVersion=1.7.0
 
 # Stdlib Level 04
@@ -58,7 +58,7 @@ stdlibHttpVersion=2.10.12
 # Stdlib Level 06
 stdlibGrpcVersion=1.10.6
 stdlibTransactionVersion=1.8.1
-stdlibWebsocketVersion=2.10.1
+stdlibWebsocketVersion=2.10.2-20240329-142100-5328b35
 stdlibWebsubVersion=2.10.0
 stdlibWebsubhubVersion=1.10.0
 
