Update docUiApi URL

--- a/gradle.properties
+++ b/gradle.properties
@@ -78,7 +78,7 @@ devToolsVersion=1.2.1-20230914-153500-664cd40
 ballerinaCommandVersion=1.4.2
 
 # API Doc UI
-docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
+docUiApi=https://api.central.ballerina.io/2.0/docs/doc-ui
 
 # GraphQL Tool
 graphqlVersion=0.8.1
