--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.9.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.9.0-20240410-095500-2653a74d
+ballerinaLangVersion=2201.9.0-20240405-165800-4b163f78
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -13,85 +13,83 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibConstraintVersion=1.4.0-20230831-142400-50e4023
-stdlibIoVersion=1.6.0-20230831-135000-049f91a
-stdlibJavaArraysVersion=1.4.0-20230831-135000-d7ceba6
-stdlibTimeVersion=2.4.0-20230831-134800-62143cd
-stdlibUrlVersion=2.4.0-20230831-134600-aab5a12
-stdlibXmldataVersion=2.7.0-20230831-135200-52e14b9
-observeVersion=1.2.0-20230831-133600-6d16df4
-stdlibMathVectorVersion=1.0.2-20230831-133300-710fabf
+stdlibIoVersion=1.6.0
+stdlibJavaArraysVersion=1.4.0
+stdlibTimeVersion=2.4.0
+stdlibUrlVersion=2.4.0
+stdlibXmldataVersion=2.7.0
+observeVersion=1.2.3-20240408-194900-a0e331f
+stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
-stdlibCryptoVersion=2.5.0-20230906-183600-c9d466b
-stdlibDataXmldataVersion=0.1.0-20240405-073500-2870c7f
-stdlibLogVersion=2.9.0-20230831-153100-9b73447
-stdlibOsVersion=1.8.0-20230831-142200-cb96913
-stdlibProtobufVersion=1.6.0-20230831-142300-81163ab
-stdlibRandomVersion=1.5.0-20230831-142400-d71749f
-stdlibTaskVersion=2.5.0-20230831-142600-ec5194a
-stdlibXsltVersion=2.6.0-20230831-142600-0c84131
-observeInternalVersion=1.2.0-20230831-141400-b3bbdc2
+stdlibConstraintVersion=1.5.0
+stdlibCryptoVersion=2.7.0-20240410-115200-2ae9fd5
+stdlibDataXmldataVersion=0.1.0-20240409-100100-f7b8da6
+stdlibLogVersion=2.9.0
+stdlibOsVersion=1.8.0
+stdlibProtobufVersion=1.6.0
+stdlibPersistVersion=1.3.0-20240409-100100-594c874
+stdlibRandomVersion=1.5.0
+stdlibTaskVersion=2.5.0
+stdlibXsltVersion=2.6.0
+observeInternalVersion=1.2.2-20240408-195500-1436319
 
 # Stdlib Level 03
-stdlibCacheVersion=3.7.0-20230831-151700-7e2b0fa
-stdlibFileVersion=1.9.0-20230831-160900-252d078
+stdlibCacheVersion=3.8.0-20240409-101100-e2d7f4e
+stdlibFileVersion=1.9.0
 stdlibFtpVersion=2.9.1
-stdlibMimeVersion=2.9.0-20230831-160900-6ecc648
-stdlibTcpVersion=1.9.2-20240403-151900-602b638
-stdlibUdpVersion=1.9.2-20240403-151800-5449c0a
-stdlibUuidVersion=1.7.0-20230831-151800-012c311
+stdlibMimeVersion=2.9.0
+stdlibTcpVersion=1.10.0-20240410-130500-701b5de
+stdlibUdpVersion=1.9.2-20240409-135000-f17730b
+stdlibUuidVersion=1.8.0-20240410-125400-bbe7ac5
 
 # Stdlib Level 04
-stdlibAuthVersion=2.10.0-20230831-160500-17532df
-stdlibDataJsondataVersion=0.1.0-20240405-073500-4f174e0
+stdlibAuthVersion=2.11.0-20240410-121600-c514b62
+stdlibDataJsondataVersion=0.1.0-20240409-124900-1e815a4
 stdlibEdiVersion=1.0.7-20230831-164800-d8fd1c1
-stdlibEmailVersion=2.9.0-20230831-170300-2a02c2b
-stdlibJwtVersion=2.10.0-20230831-160800-b5db938
-stdlibMqttVersion=1.0.0-20230831-160600-42fa522
-stdlibOAuth2Version=2.10.0-20230831-161200-a4a83a6
-stdlibTomlVersion=0.5.0-20230831-170000-244ddb6
-stdlibYamlVersion=0.5.0-20230831-170000-94fddca
+stdlibEmailVersion=2.9.0
+stdlibJwtVersion=2.11.0-20240410-124800-1a4eb44
+stdlibMqttVersion=1.1.0-20240410-130400-35cd4ff
+stdlibOAuth2Version=2.11.0-20240410-121700-502990d
+stdlibTomlVersion=0.5.1
+stdlibYamlVersion=0.5.3
 
 # Stdlib Level 05
-stdlibHttpVersion=2.10.13-20240327-141300-ecd1355
+stdlibHttpVersion=2.11.0-20240410-121300-ae1095d
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.10.0-20230831-221200-3f0bada
-stdlibSoapVersion=0.2.0-20230831-210000-4b8659f
-stdlibTransactionVersion=1.8.0-20230831-210400-57edb68
-stdlibWebsocketVersion=2.10.2-20240329-142100-5328b35
-stdlibWebsubVersion=2.10.0-20230831-211200-c6f33c4
-stdlibWebsubhubVersion=1.10.0-20230831-210000-695f161
+stdlibGrpcVersion=1.11.0-20240410-134200-48dc537
+stdlibSoapVersion=0.11.0-20240410-105500-1b67589
+stdlibTransactionVersion=1.9.0-20240410-104900-57aec29
+stdlibWebsocketVersion=2.11.0-20240409-202400-9d7e032
+stdlibWebsubVersion=2.11.0-20240410-114300-c22659c
+stdlibWebsubhubVersion=1.11.0-20240410-114100-b08012f
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.11.0-20240212-151600-33c9bfd
-stdlibSqlVersion=1.11.0-20230831-224400-d2491ed
-
-# Stdlib Level 08
-stdlibPersistVersion=1.2.0-20230831-142100-b7b968f
+stdlibGraphqlVersion=1.12.0-20240410-115600-7fa8ba3
+stdlibSqlVersion=1.13.0-20240410-111000-2cc6b6c
 
 # Persist Tool
-persistToolVersion=1.2.0-20230908-152500-2ba8c45
+persistToolVersion=1.3.0-20240410-211100-f75de8d
 
 # Dev Tools
-devToolsVersion=1.2.1-20230914-153500-664cd40
+devToolsVersion=1.4.0-20240410-212900-21f1e45
 ballerinaCommandVersion=1.4.2
 
 # GraphQL Tool
-graphqlVersion=0.8.1
+graphqlToolVersion=0.10.0-20240410-152300-fc24206
 
 # Protoc Tool
-protocToolVersion=0.2.0-20230821-121200-8933a55
+protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.9.0-20240410-132300-187429e
+openapiToolVersion=1.9.0-20240410-132300-187429e
 
 # AsyncAPI Module
-asyncapiVersion=0.6.0
+asyncapiToolVersion=0.8.0-20240410-162000-91c4290
 
-c2cVersion=3.0.0-20240403-142500-544f548
+c2cVersion=3.0.0-20240410-151200-8abd3fa
 
 dataMapperVersion=2.2.1-20230831-150600-0e37f32
 
