--- a/gradle.properties
+++ b/gradle.properties
@@ -94,7 +94,7 @@ openapiVersion=1.9.0-20240410-215000-47b4b8a
 # AsyncAPI Module
 asyncapiVersion=0.8.0-20240410-162000-91c4290
 
-c2cVersion=2.3.2
+c2cVersion=3.0.0-20240410-214400-0e03d41
 
 dataMapperVersion=2.2.1-20230831-150600-0e37f32
 
