Add mising dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configurat
 
 # Stdlib Level 01
 stdlibConstraintVersion=1.5.0
+stdlibIoVersion=1.6.0
 stdlibJavaArraysVersion=1.4.0
 stdlibTimeVersion=2.4.0
 stdlibUrlVersion=2.4.0
