Add mising dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -80,6 +80,9 @@ persistToolVersion=1.3.0-20240410-230800-30e25cd
 devToolsVersion=1.4.0-20240410-233400-7586fc7
 ballerinaCommandVersion=1.4.2
 
+# API Doc UI
+docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
+
 # GraphQL Tool
 graphqlVersion=0.10.0-20240410-222300-898ef65
 
