Update avro version to 0.1.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ stdlibMathVectorVersion=1.0.2
 
 
 # Stdlib Level 02
-stdlibAvroVersion=0.1.2-20240415-135800-8801889
+stdlibAvroVersion=0.1.1
 stdlibCryptoVersion=2.7.0-20240410-140300-72e9adb
 stdlibDataXmldataVersion=0.1.0-20240409-100100-f7b8da6
 stdlibLogVersion=2.9.0
